bastion-vpc.template
{
    "AWSTemplateFormatVersion": "2010-09-09",

    "Description": "",

    "Parameters": {
        "ShortName": {
            "Type": "String",
            "Default": { "Ref": "AWS::StackName" },
            "Description": "Short name of the new VPC. Name will have the AWS Region and '-vpc' appended (i.e.: example-us-west-2-vpc)."
        },
        "AvailabilityZone": {
            "Type": "String",
            "Default": { "Fn::Select": [ "0", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ] },
            "Description": "Availability zone where bastion VPC instances such as the NAT and jump servers will be placed."
        }
    },

    "Resources": {
        "BastionVPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.0.0.0/24",
                "InstanceTenancy": "default",
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "ShortName" }, { "Ref": "AWS::Region" }, "vpc" ] ] }
                    }
                ]
            }
        },

        "PublicSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": "10.0.0.0/24",
                "AvailabilityZone": "us-west-2a",
                "VpcId": {
                    "Ref": "BastionVPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "ShortName" }, { "Ref": "AWS::Region" }, "public-subnet" ] ] }
                    }
                ]
            }
        },

        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "vkzone-us-west-2-igw"
                    }
                ]
            }
        },

        "DHCPOptions": {
            "Type": "AWS::EC2::DHCPOptions",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "vkzone-us-west-2-dopt"
                    }
                ],
                "DomainName": "us-west-2.compute.internal",
                "DomainNameServers": [
                    "AmazonProvidedDNS"
                ]
            }
        },

        "NetworkACL": {
            "Type": "AWS::EC2::NetworkAcl",
            "Properties": {
                "VpcId": {
                    "Ref": "BastionVPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "vkzone-us-west-2-acl"
                    }
                ]
            }
        },

        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "BastionVPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "vkzone-public-us-west-2-rtb"
                    }
                ]
            }
        },

        "BastionInstance": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "DisableApiTermination": "FALSE",
                "ImageId": "ami-d13845e1",
                "InstanceType": "t2.micro",
                "KeyName": "default",
                "Monitoring": "false",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "vkzone-bastion"
                    }
                ],
                "NetworkInterfaces": [
                    {
                        "DeleteOnTermination": "true",
                        "Description": "Primary network interface",
                        "DeviceIndex": 0,
                        "SubnetId": {
                            "Ref": "PublicSubnet1"
                        },
                        "PrivateIpAddresses": [
                            {
                                "PrivateIpAddress": "10.0.0.2",
                                "Primary": "true"
                            }
                        ],
                        "GroupSet": [
                            {
                                "Ref": "BastionSecurityGroup"
                            }
                        ]
                    }
                ]
            }
        },

        "NATInstance": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "DisableApiTermination": "FALSE",
                "ImageId": "ami-f032acc0",
                "InstanceType": "t1.micro",
                "KernelId": "aki-fc37bacc",
                "KeyName": "internal",
                "Monitoring": "false",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "vkzone-nat"
                    }
                ],
                "NetworkInterfaces": [
                    {
                        "DeleteOnTermination": "true",
                        "Description": "Primary network interface",
                        "DeviceIndex": 0,
                        "SubnetId": {
                            "Ref": "PublicSubnet1"
                        },
                        "PrivateIpAddresses": [
                            {
                                "PrivateIpAddress": "10.0.0.3",
                                "Primary": "true"
                            }
                        ],
                        "GroupSet": [
                            {
                                "Ref": "NATSecurityGroup"
                            },
                            {
                                "Ref": "PrivateSecurityGroup"
                            }
                        ]
                    }
                ]
            }
        },

        "BastionSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "bastion host security group",
                "VpcId": {
                    "Ref": "BastionVPC"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "24.9.253.190/32"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "-1",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        },

        "NATSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "network address translation security group",
                "VpcId": {
                    "Ref": "BastionVPC"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "-1",
                        "CidrIp": "10.0.0.0/16"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "-1",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        },

        "PrivateSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "private security group",
                "VpcId": {
                    "Ref": "BastionVPC"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "-1",
                        "CidrIp": "10.0.0.0/16"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "-1",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        },

        "PublicSubnet1NetworkACLAssociation": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "NetworkACL"
                },
                "SubnetId": {
                    "Ref": "PublicSubnet1"
                }
            }
        },

        "GatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "BastionVPC"
                },
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                }
            }
        },

        "PublicSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "PublicSubnet1"
                }
            }
        },

        "PublicSubnetRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "GatewayId": {
                    "Ref": "InternetGateway"
                }
            },
            "DependsOn": "GatewayAttachment"
        },

        "VPCDHCPOptionsAssociation": {
            "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
            "Properties": {
                "VpcId": {
                    "Ref": "BastionVPC"
                },
                "DhcpOptionsId": {
                    "Ref": "DHCPOptions"
                }
            }
        }

    }

}
