primary-vpc-us-west-2.template
{
    "AWSTemplateFormatVersion": "2010-09-09",

    "Description": "Creates the primary VPC with a NAT and bastion server. Project specific VPCs are connected to this VPC.",

    "Parameters": {
        "AvailabilityZone": {
            "Type": "String",
            "Default": "us-west-2a",
            "Description": "Availability zone where primary VPC instances such as the NAT and bastion servers will be placed."
        },
        "BastionKeyName": {
            "Type": "String",
            "Default": "default",
            "Description": "SSH key name used to connect with the bastion server via the ec2-user account.",
            "MinLength": "1",
            "MaxLength": "255",
            "AllowedPattern": "[\\x20-\\x7E]*",
            "ConstraintDescription": "can contain only ASCII characters."
        },
        "InternalKeyName": {
            "Type": "String",
            "Default": "internal",
            "Description": "SSH key name used to connect from the bastion server to other servers via the ec2-user account.",
            "MinLength": "1",
            "MaxLength": "255",
            "AllowedPattern": "[\\x20-\\x7E]*",
            "ConstraintDescription": "can contain only ASCII characters."
        }
    },

    "Resources": {
        "PrimaryVPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.0.0.0/24",
                "InstanceTenancy": "default",
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, { "Ref": "AWS::Region" }, "vpc" ] ] }
                    }
                ]
            }
        },

        "Subnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": "10.0.0.0/24",
                "AvailabilityZone": { "Ref": "AvailabilityZone" },
                "VpcId": { "Ref": "PrimaryVPC" },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, { "Ref": "AvailabilityZone" }, "subnet" ] ] }
                    }
                ]
            }
        },

        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, { "Ref": "AWS::Region" }, "igw" ] ] }
                    }
                ]
            }
        },

        "DHCPOptions": {
            "Type": "AWS::EC2::DHCPOptions",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, { "Ref": "AWS::Region" }, "dopt" ] ] }
                    }
                ],
                "DomainName": { "Fn::Join": [ ".", [ { "Ref": "AWS::Region" }, "compute.internal" ] ] },
                "DomainNameServers": [ "AmazonProvidedDNS" ]
            }
        },

        "NetworkACL": {
            "Type": "AWS::EC2::NetworkAcl",
            "Properties": {
                "VpcId": { "Ref": "PrimaryVPC" },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, { "Ref": "AWS::Region" }, "acl" ] ] }
                    }
                ]
            }
        },

        "EgressACLEntry": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "CidrBlock": "0.0.0.0/0",
                "Egress": true,
                "Protocol": "-1",
                "RuleAction": "allow",
                "RuleNumber": "100",
                "NetworkAclId": {
                    "Ref": "NetworkACL"
                }
            }
        },
        "IngressACLEntry": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "CidrBlock": "0.0.0.0/0",
                "Protocol": "-1",
                "RuleAction": "allow",
                "RuleNumber": "100",
                "NetworkAclId": {
                    "Ref": "NetworkACL"
                }
            }
        },

        "SubnetNetworkACLAssociation": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "NetworkAclId": { "Ref": "NetworkACL" },
                "SubnetId": { "Ref": "Subnet" }
            }
        },

        "RouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": { "Ref": "PrimaryVPC" },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, { "Ref": "AWS::Region" }, "rtb" ] ] }
                    }
                ]
            }
        },

        "BastionInstance": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "AvailabilityZone": { "Ref": "AvailabilityZone" },
                "DisableApiTermination": "FALSE",
                "ImageId": "ami-d13845e1",
                "InstanceType": "t2.micro",
                "KeyName": { "Ref": "BastionKeyName" },
                "Monitoring": "false",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "bastion" ] ] }
                    }
                ],
                "NetworkInterfaces": [
                    {
                        "AssociatePublicIpAddress": "true",
                        "DeleteOnTermination": "true",
                        "Description": "Primary network interface",
                        "DeviceIndex": 0,
                        "SubnetId": { "Ref": "Subnet" },
                        "PrivateIpAddresses": [
                            {
                                "PrivateIpAddress": "10.0.0.10",
                                "Primary": "true"
                            }
                        ],
                        "GroupSet": [
                            {
                                "Ref": "BastionSecurityGroup"
                            }
                        ]
                    }
                ]
            }
        },

        "NATInstance": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "AvailabilityZone": { "Ref": "AvailabilityZone" },
                "DisableApiTermination": "FALSE",
                "ImageId": "ami-f032acc0",
                "InstanceType": "t1.micro",
                "KernelId": "aki-fc37bacc",
                "KeyName": { "Ref": "InternalKeyName" },
                "Monitoring": "false",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "nat" ] ] }
                    }
                ],
                "NetworkInterfaces": [
                    {
                        "AssociatePublicIpAddress": "true",
                        "DeleteOnTermination": "true",
                        "Description": "Primary network interface",
                        "DeviceIndex": 0,
                        "SubnetId": { "Ref": "Subnet" },
                        "PrivateIpAddresses": [
                            {
                                "PrivateIpAddress": "10.0.0.11",
                                "Primary": "true"
                            }
                        ],
                        "GroupSet": [ { "Ref": "NATSecurityGroup" }, { "Ref": "PrivateSecurityGroup" } ]
                    }
                ]
            }
        },

        "BastionSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "bastion server security group",
                "VpcId": { "Ref": "PrimaryVPC" },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "bastion-sg" ] ] }
                    }
                ],
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "24.9.253.190/32"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "-1",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        },

        "NATSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "network address translation security group",
                "VpcId": { "Ref": "PrimaryVPC" },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "nat-sg" ] ] }
                    }
                ],
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "-1",
                        "CidrIp": "10.0.0.0/16"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "-1",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        },

        "PrivateSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "private security group",
                "VpcId": { "Ref": "PrimaryVPC" },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "private-sg" ] ] }
                    }
                ],
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "-1",
                        "CidrIp": "10.0.0.0/16"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "-1",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        },

        "GatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": { "Ref": "PrimaryVPC" },
                "InternetGatewayId": { "Ref": "InternetGateway" }
            }
        },

        "SubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": { "Ref": "RouteTable" },
                "SubnetId": { "Ref": "Subnet" }
            }
        },

        "SubnetRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "RouteTableId": { "Ref": "RouteTable" },
                "GatewayId": { "Ref": "InternetGateway" }
            },
            "DependsOn": "GatewayAttachment"
        },

        "VPCDHCPOptionsAssociation": {
            "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
            "Properties": {
                "VpcId": { "Ref": "PrimaryVPC" },
                "DhcpOptionsId": { "Ref": "DHCPOptions" }
            }
        }

    }

}
